[gd_scene load_steps=20 format=2]

[ext_resource path="res://Backgrounds/bg_high.png" type="Texture" id=1]
[ext_resource path="res://UI/29_JQ_App_Screens.png" type="Texture" id=2]
[ext_resource path="res://UI/Button_bg.png" type="Texture" id=3]
[ext_resource path="res://scripts/answer_button.gd" type="Script" id=4]
[ext_resource path="res://Fonts/UI_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://views/scripts/questions.gd" type="Script" id=6]
[ext_resource path="res://views/scripts/difficulty_progress.gd" type="Script" id=7]
[ext_resource path="res://UI/difficulty_bg.png" type="Texture" id=8]
[ext_resource path="res://UI/difficulty_fg.png" type="Texture" id=9]
[ext_resource path="res://addons/FontAwesome5/FontAwesome.gd" type="Script" id=10]
[ext_resource path="res://addons/FontAwesome5/fa-solid-900.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Fonts/UI_font_answer_button.tres" type="DynamicFont" id=12]
[ext_resource path="res://UI/Button_bg_wrong.png" type="Texture" id=13]
[ext_resource path="res://UI/Button_bg_correct.png" type="Texture" id=14]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.864078, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.823529, 0.760784, 0.572549, 0.784314 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.823529, 0.760784, 0.572549, 0.235294 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 11 )

[node name="Questions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_top = 0.377
anchor_right = 1.0
anchor_bottom = 0.897
margin_top = -0.559998
margin_bottom = -0.160034
custom_constants/separation = 20
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_right = 720.0
margin_bottom = 126.0
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="QuestionText" type="Label" parent="Panel/VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_right = 700.0
margin_bottom = 126.0
rect_min_size = Vector2( 0, 126 )
custom_colors/font_color = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Zeile1
Zeile2
Zeile3"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerButton0" type="TextureButton" parent="Panel/VBoxContainer"]
margin_top = 146.0
margin_right = 720.0
margin_bottom = 261.0
rect_min_size = Vector2( 0, 115 )
texture_normal = ExtResource( 3 )
expand = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
background_neutral = ExtResource( 3 )
background_correct = ExtResource( 14 )
background_wrong = ExtResource( 13 )

[node name="Label" type="Label" parent="Panel/VBoxContainer/AnswerButton0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
custom_fonts/font = ExtResource( 12 )
text = "Answer1"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="Panel/VBoxContainer/AnswerButton0"]
position = Vector2( 360, 53 )
z_index = 1
emitting = false
amount = 150
lifetime = 3.0
one_shot = true
speed_scale = 2.5
explosiveness = 0.9
lifetime_randomness = 0.3
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 360, 40 )
direction = Vector2( 0, -1 )
spread = 60.0
gravity = Vector2( 0, 100 )
initial_velocity = 200.0
initial_velocity_random = 0.75
angular_velocity = 150.0
angular_velocity_random = 0.5
scale_amount = 0.6
color_ramp = SubResource( 1 )

[node name="AnswerButton1" type="TextureButton" parent="Panel/VBoxContainer"]
margin_top = 281.0
margin_right = 720.0
margin_bottom = 396.0
rect_min_size = Vector2( 0, 115 )
texture_normal = ExtResource( 3 )
expand = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
background_neutral = ExtResource( 3 )
background_correct = ExtResource( 14 )
background_wrong = ExtResource( 13 )

[node name="Label" type="Label" parent="Panel/VBoxContainer/AnswerButton1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
custom_fonts/font = ExtResource( 12 )
text = "Answer2"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="Panel/VBoxContainer/AnswerButton1"]
position = Vector2( 360, 53 )
z_index = 1
emitting = false
amount = 150
lifetime = 2.5
one_shot = true
speed_scale = 2.5
explosiveness = 0.9
lifetime_randomness = 0.1
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 360, 40 )
direction = Vector2( 0, -1 )
spread = 60.0
gravity = Vector2( 0, 100 )
initial_velocity = 200.0
initial_velocity_random = 0.75
angular_velocity = 150.0
angular_velocity_random = 0.5
scale_amount = 0.6
color_ramp = SubResource( 1 )

[node name="AnswerButton2" type="TextureButton" parent="Panel/VBoxContainer"]
margin_top = 416.0
margin_right = 720.0
margin_bottom = 531.0
rect_min_size = Vector2( 0, 115 )
texture_normal = ExtResource( 3 )
expand = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
background_neutral = ExtResource( 3 )
background_correct = ExtResource( 14 )
background_wrong = ExtResource( 13 )

[node name="Label" type="Label" parent="Panel/VBoxContainer/AnswerButton2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
custom_fonts/font = ExtResource( 12 )
text = "Answer3"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="Panel/VBoxContainer/AnswerButton2"]
position = Vector2( 360, 53 )
z_index = 1
emitting = false
amount = 150
lifetime = 2.5
one_shot = true
speed_scale = 2.5
explosiveness = 0.9
lifetime_randomness = 0.1
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 360, 40 )
direction = Vector2( 0, -1 )
spread = 60.0
gravity = Vector2( 0, 100 )
initial_velocity = 200.0
initial_velocity_random = 0.75
angular_velocity = 150.0
angular_velocity_random = 0.5
scale_amount = 0.6
color_ramp = SubResource( 1 )

[node name="AnswerButton3" type="TextureButton" parent="Panel/VBoxContainer"]
margin_top = 551.0
margin_right = 720.0
margin_bottom = 666.0
rect_min_size = Vector2( 0, 115 )
texture_normal = ExtResource( 3 )
expand = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
background_neutral = ExtResource( 3 )
background_correct = ExtResource( 14 )
background_wrong = ExtResource( 13 )

[node name="Label" type="Label" parent="Panel/VBoxContainer/AnswerButton3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
custom_fonts/font = ExtResource( 12 )
text = "Answer4"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="Panel/VBoxContainer/AnswerButton3"]
position = Vector2( 360, 53 )
z_index = 1
emitting = false
amount = 150
lifetime = 2.5
one_shot = true
speed_scale = 2.5
explosiveness = 0.9
lifetime_randomness = 0.1
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 360, 40 )
direction = Vector2( 0, -1 )
spread = 60.0
gravity = Vector2( 0, 100 )
initial_velocity = 200.0
initial_velocity_random = 0.75
angular_velocity = 150.0
angular_velocity_random = 0.5
scale_amount = 0.6
color_ramp = SubResource( 1 )

[node name="DifficultyProgress" type="TextureProgress" parent="Panel"]
anchor_left = 0.507
anchor_top = 0.209
anchor_right = 0.507
anchor_bottom = 0.246
margin_left = -143.04
margin_top = -0.52002
margin_right = 214.96
margin_bottom = 12.12
rect_scale = Vector2( 0.8, 0.8 )
max_value = 10.0
step = 0.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionProgress" type="ProgressBar" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 0.035
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
max_value = 7.0
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionStats" type="Label" parent="Panel"]
anchor_top = 0.272
anchor_right = 1.0
anchor_bottom = 0.303
margin_top = -0.160034
custom_colors/font_color = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Question stats"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FeedbackButton" type="Label" parent="Panel"]
anchor_left = 0.161
anchor_top = 0.223
anchor_right = 0.161
anchor_bottom = 0.223
margin_left = -71.9771
margin_top = -0.41568
margin_right = 0.0229187
margin_bottom = 63.5843
custom_colors/font_color = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_fonts/font = SubResource( 4 )
text = "ÔÅ±"
align = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_size = 64
icon_name = "exclamation-triangle"

[node name="Feedback" type="Button" parent="Panel/FeedbackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Label" parent="Panel"]
anchor_left = 0.161
anchor_top = 0.293
anchor_right = 0.161
anchor_bottom = 0.293
margin_left = -71.92
margin_top = 0.959991
margin_right = 0.0800018
margin_bottom = 64.96
custom_colors/font_color = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_fonts/font = SubResource( 5 )
text = "ÔÅó"
align = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
icon_size = 64
icon_name = "circle-xmark"

[node name="Cancel" type="Button" parent="Panel/CancelButton"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseBlocker" type="ColorRect" parent="Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Panel/FeedbackButton/Feedback" to="." method="_on_Feedback_button_up"]
[connection signal="button_up" from="Panel/CancelButton/Cancel" to="." method="_on_Cancel_button_up"]
